--- a/index.html
+++ b/index.html
@@ -37,14 +37,13 @@
                     
             </div>
                
-               <nav class="col-12 col-sm-12 col-lg-6 navbar navbar-expand-lg navbar-light">
+               <nav class="col-12 col-sm-12 col-lg-4 offset-lg-1 navbar navbar-expand-lg navbar-light">
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                         <div class="navbar-nav">
-                            <a class="underlinedButton nav-link" href="#">Home <span class="sr-only"></span></a>
-                            <a class="nav-link underlinedButton" href="#">O mnie</a>
-                            <a class="nav-link underlinedButton" href="#">Projekty</a>
-                            <a class="nav-link underlinedButton" href="#">Kontakt</a>
-                            <a class="customButton" href="#">Kontakt</a>
+                            <a class="underlinedButton nav-link homeBtn" href="#">Home <span class="sr-only"></span></a>
+                            <a class="nav-link underlinedButton" id="aboutBtn" href="#">O mnie</a>
+                            <a class="nav-link underlinedButton" id="projectsBtn" href="#">Projekty</a>
+                            <a class="customButton" id="contactBtn" href="#">Kontakt</a>
                         </div>
                     </div>
                 </nav>
@@ -66,7 +65,7 @@
                         <div class="row">
                             <div class="col-6 noPaddingColumn">
                                 <div class="dividedButton">
-                                    <div class="customButton">Kontakt</div>
+                                    <div class="customButton">Napisz do mnie</div>
                                     <div class="arrowBox">
                                         <img src="img/icons/arrow-long.svg" alt="Strzałka przycisk">
                                     </div>
@@ -91,7 +90,7 @@
 
             <!-- Image column -->
             <div class="col-12 col-lg-6">
-                <div class="secondImage">
+                <div class="secondImage" id="secondImage">
                     <img class="image" src="https://dummyimage.com/300x300/000/fff" alt="Zdjęcie">
                 </div>
             </div>
@@ -244,6 +243,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="js/simple-lightbox.js"></script>
     <script src="js/script.js"></script>
 </body>
