Updated smooth scroll script

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                         <div class="navbar-nav">
                             <a class="underlinedButton nav-link homeBtn" href="#">Home <span class="sr-only"></span></a>
-                            <a class="nav-link underlinedButton" id="aboutBtn" href="#">O mnie</a>
-                            <a class="nav-link underlinedButton" id="projectsBtn" href="#">Projekty</a>
-                            <a class="customButton" id="contactBtn" href="#">Kontakt</a>
+                            <a class="nav-link underlinedButton" id="aboutBtn" href="#secondImage">O mnie</a>
+                            <a class="nav-link underlinedButton" id="projectsBtn" href="#projects">Projekty</a>
+                            <a class="customButton" id="contactBtn" href="#footer">Kontakt</a>
                         </div>
                     </div>
                 </nav>
@@ -149,7 +149,7 @@
     </div>
 
     <!-- Fourth container - Projekty -->
-    <div class="separator">
+    <div class="separator" id="projects">
         <div class="container">
             <div class="row">
                 <div class="col-7">
@@ -177,11 +177,11 @@
                     <!-- Slider -->
                     <div class="projects">
                         <a href="img/photos/full/01.jpg" class="big"><img src="img/photos/thumb/01.jpg" alt="Project 1" title="Project 1" /></a>
-                        <a href="img/photos/full/02.jpg"><img src="img/photos/thumb/02.jpg" alt="" title=""/></a>
-                        <a href="img/photos/full/03.jpg"><img src="img/photos/thumb/03.jpg" alt="" title="Project 3"/></a>
-                        <a href="img/photos/full/04.jpg"><img src="img/photos/thumb/04.jpg" alt="" title=""/></a>
-                        <a href="img/photos/full/05.jpg"><img src="img/photos/thumb/05.jpg" alt="" title=""/></a>
-                        <a href="img/photos/full/06.jpg"><img src="img/photos/thumb/06.jpg" alt="" title=""/></a>
+                        <a href="img/photos/full/02.jpg"><img src="img/photos/thumb/02.jpg" alt="Project 2" title="Project 2"/></a>
+                        <a href="img/photos/full/03.jpg"><img src="img/photos/thumb/03.jpg" alt="Project 3" title="Project 3"/></a>
+                        <a href="img/photos/full/04.jpg"><img src="img/photos/thumb/04.jpg" alt="Project 4" title="Project 4"/></a>
+                        <a href="img/photos/full/05.jpg"><img src="img/photos/thumb/05.jpg" alt="Project 5" title="Project 5"/></a>
+                        <a href="img/photos/full/06.jpg"><img src="img/photos/thumb/06.jpg" alt="Project 6" title="Project 6"/></a>
                         <div class="clear"></div>
                     </div>
                     <div class="clear"></div>
@@ -192,7 +192,7 @@
 
     <!-- Fifth container - footer -->
     <footer>
-        <div class="contact">
+        <div class="contact" id="footer">
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-md-6">
