Fixed footer positioning

--- a/index.html
+++ b/index.html
@@ -197,6 +197,11 @@
                 <div class="row">
                     <div class="col-12 col-md-6">
                         <img src="img/icons/Path%203895.svg" alt="Logo">
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-12 col-md-6">
                         <div class="contactDescription">
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque explicabo, autem tempora, magnam officia facere expedita porro sint alias esse mollitia dignissimos consectetur asperiores iste qui distinctio neque, in corrupti.</p>
                         </div>
@@ -208,28 +213,24 @@
                         </div>
                     </div>
                     <div class="col-12 col-md-6">
-                        <div class="contactData">
-                            <div class="container">
-                                <div class="row">
-                                    <div class="col-12">
-                                        <h2><strong>Kontakt</strong></h2>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-12">
-                                        <div class="separatorLineWhite"> </div>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-6">
-                                        <h4>e-mail</h4>
-                                        <p class="eMail"><a href="mailto:bartek.sek@o2.pl"> bartek.sek@o2.pl</a></p>
-                                    </div>
-                                    <div class="col-6">
-                                        <h4>Tel.</h4>
-                                        <p class="cellPhone"><a href="tel:605850383"> 605 850 303</a></p>
-                                    </div>
-                                </div>
+                        <div class="row">
+                            <div class="col-12">
+                                <h2><strong>Kontakt</strong></h2>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-12">
+                                <div class="separatorLineWhite"> </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-6">
+                                <h4>e-mail</h4>
+                                <p class="eMail"><a href="mailto:bartek.sek@o2.pl"> bartek.sek@o2.pl</a></p>
+                            </div>
+                            <div class="col-6">
+                                <h4>Tel.</h4>
+                                <p class="cellPhone"><a href="tel:605850383"> 605 850 303</a></p>
                             </div>
                         </div>
                     </div>
