Changed folder names and added imge

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div class="col-12 col-lg-6">
                 <!-- Image box -->
                 <div class="firstImage">
-                    <img class="image" src="https://dummyimage.com/300x300/000/fff" alt="Zdjęcie profilowe">
+                    <img class="image" src="img/photos/zdjecie.jpg" alt="Zdjęcie profilowe">
                 </div>
             </div>
         </header>
@@ -91,7 +91,7 @@
             <!-- Image column -->
             <div class="col-12 col-lg-6">
                 <div class="secondImage" id="secondImage">
-                    <img class="image" src="https://dummyimage.com/300x300/000/fff" alt="Zdjęcie">
+                    <img class="image" src="" alt="Zdjęcie">
                 </div>
             </div>
 
@@ -176,12 +176,12 @@
                 <div class="col-12 ">
                     <!-- Slider -->
                     <div class="projects">
-                        <a href="img/photos/full/01.jpg" class="big"><img src="img/photos/thumb/01.jpg" alt="Project 1" title="Project 1" /></a>
-                        <a href="img/photos/full/02.jpg"><img src="img/photos/thumb/02.jpg" alt="Project 2" title="Project 2"/></a>
-                        <a href="img/photos/full/03.jpg"><img src="img/photos/thumb/03.jpg" alt="Project 3" title="Project 3"/></a>
-                        <a href="img/photos/full/04.jpg"><img src="img/photos/thumb/04.jpg" alt="Project 4" title="Project 4"/></a>
-                        <a href="img/photos/full/05.jpg"><img src="img/photos/thumb/05.jpg" alt="Project 5" title="Project 5"/></a>
-                        <a href="img/photos/full/06.jpg"><img src="img/photos/thumb/06.jpg" alt="Project 6" title="Project 6"/></a>
+                        <a href="img/gallery/full/01.jpg" class="big"><img src="img/gallery/thumb/01.jpg" alt="Project 1" title="Project 1" /></a>
+                        <a href="img/gallery/full/02.jpg"><img src="img/gallery/thumb/02.jpg" alt="Project 2" title="Project 2"/></a>
+                        <a href="img/gallery/full/03.jpg"><img src="img/gallery/thumb/03.jpg" alt="Project 3" title="Project 3"/></a>
+                        <a href="img/gallery/full/04.jpg"><img src="img/gallery/thumb/04.jpg" alt="Project 4" title="Project 4"/></a>
+                        <a href="img/gallery/full/05.jpg"><img src="img/gallery/thumb/05.jpg" alt="Project 5" title="Project 5"/></a>
+                        <a href="img/gallery/full/06.jpg"><img src="img/gallery/thumb/06.jpg" alt="Project 6" title="Project 6"/></a>
                         <div class="clear"></div>
                     </div>
                     <div class="clear"></div>
@@ -196,7 +196,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-md-6">
-                        <img src="img/icons/Path%203895.svg" alt="Logo">
+                       <img src="img/icons/Path%203895.svg" alt="Logo">
                     </div>
                 </div>
 
