--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-md-6">
-                       <img src="img/icons/Path%203895.svg" alt="Logo">
+                       <img class="logoFooter" src="img/icons/Path%203895.svg" alt="Logo">
                     </div>
                 </div>
 
@@ -248,5 +248,4 @@
     <script src="js/simple-lightbox.js"></script>
     <script src="js/script.js"></script>
 </body>
-
 </html>
